--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,4 +1,4 @@
-.search-main{
+/* .search-main{
     margin-top: 60px;
     padding: 20px;
     margin-left: 22%;
@@ -29,7 +29,6 @@ input[type=text] {
     border-radius: 10px;
    }
    .image--bike {
-    /* background-color: aqua; */
     border: 1px solid black;
     margin: 10px;
     padding: 10px;
@@ -38,4 +37,4 @@ input[type=text] {
 }
 .Card-- {
     padding: 10px;
-}
+} */
