--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.top--section {
+/* .top--section {
   color: white;
   background-color: rgb(18, 18, 66);
   text-align: center;
@@ -6,4 +6,4 @@
   width: 100%;
   top: 0%;
 
-}
+} */
